--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -2,7 +2,7 @@
   <div class="modal">
     <button class="btn-modal-close" data-modal-close>
       <svg class="icon icon-modal-close">
-        <use href="/img/icons/sprites.svg#close"></use>
+        <use href="./img/icons/sprites.svg#close"></use>
       </svg>
     </button>
 
@@ -35,7 +35,7 @@
   <div class="add-rating-modal visually-hidden">
     <button class="btn-modal-close" data-add-rating-close>
       <svg class="icon icon-modal-close">
-        <use href="/img/icons/sprites.svg#close"></use>
+        <use href="./img/icons/sprites.svg#close"></use>
       </svg>
     </button>
     <form class="add-rating-form" method="post">
@@ -51,7 +51,7 @@
             value="1"
           />
           <svg class="icon icon-modal-rating-star" width="24" height="24">
-            <use href="/img/icons/sprites.svg#star"></use>
+            <use href="./img/icons/sprites.svg#star"></use>
           </svg>
         </label>
         <label class="star-radio-btn">
@@ -62,7 +62,7 @@
             value="2"
           />
           <svg class="icon icon-modal-rating-star" width="24" height="24">
-            <use href="/img/icons/sprites.svg#star"></use>
+            <use href="./img/icons/sprites.svg#star"></use>
           </svg>
         </label>
         <label class="star-radio-btn">
@@ -73,7 +73,7 @@
             value="3"
           />
           <svg class="icon icon-modal-rating-star" width="24" height="24">
-            <use href="/img/icons/sprites.svg#star"></use>
+            <use href="./img/icons/sprites.svg#star"></use>
           </svg>
         </label>
         <label class="star-radio-btn">
@@ -84,7 +84,7 @@
             value="4"
           />
           <svg class="icon icon-modal-rating-star" width="24" height="24">
-            <use href="/img/icons/sprites.svg#star"></use>
+            <use href="./img/icons/sprites.svg#star"></use>
           </svg>
         </label>
         <label class="star-radio-btn">
@@ -95,7 +95,7 @@
             value="5"
           />
           <svg class="icon icon-modal-rating-star" width="24" height="24">
-            <use href="/img/icons/sprites.svg#star"></use>
+            <use href="./img/icons/sprites.svg#star"></use>
           </svg>
         </label>
       </div>
