--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -10,7 +10,7 @@
   margin-bottom: 10px;
 
   @media screen and (min-width: 768px) {
-    margin-bottom: 16;
+    margin-bottom: 16px;
   }
 }
 /* #endregion General */
