--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -187,6 +187,8 @@
   background-color: var(--color-white);
   font-size: 14px;
   line-height: 1.285;
+  transition: var(--trns);
+  transition-property: color, background-color;
 
   @media screen and (min-width: 768px) {
     font-size: 16px;
