--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,7 +22,8 @@
   line-height: 2rem;
 }
 
-.breadcrumbs h3, .breadcrumbs span{
+.breadcrumbs h3,
+.breadcrumbs span {
   font-size: 2.75rem;
   line-height: 3rem;
   font-weight: 400;
@@ -30,12 +31,12 @@
   color: var(--color-black);
 }
 
-.breadcrumbs li{
+.breadcrumbs li {
   display: inline-flex;
   align-items: center;
 }
 
-.breadcrumbs span{
+.breadcrumbs span {
   margin-inline: 10px;
 }
 
@@ -82,7 +83,7 @@
   margin-top: 20px;
 }
 
-.search-container{
+.search-container {
   margin-top: 40px;
   display: none;
   align-items: center;
@@ -92,7 +93,7 @@
   border-radius: 30px;
 }
 
-.search-container input{
+.search-container input {
   background-color: transparent;
   border: none;
   font-size: 0.875rem;
@@ -101,16 +102,16 @@
   height: 20px;
 }
 
-.search-container input:focus{
+.search-container input:focus {
   border: none;
   outline: none;
 }
 
-.search-container input::placeholder{
+.search-container input::placeholder {
   color: var(--color-black);
 }
 
-.search-button{
+.search-button {
   background-color: transparent;
   background-image: url('../img/icons/search.svg');
   background-repeat: no-repeat;
@@ -121,7 +122,7 @@
 }
 
 @media (min-width: 768px) {
-  .search-container{
+  .search-container {
     width: 273px;
     margin-top: 32px;
   }
@@ -132,7 +133,7 @@
     margin-top: 0;
   }
 
-  .search-container{
+  .search-container {
     margin-top: 0;
     margin-inline-end: 32px;
   }
@@ -248,20 +249,20 @@
   padding-inline: 0.5rem;
 }
 
-.justify-space-between{
+.justify-space-between {
   justify-content: space-between;
 }
 
-.w-full{
+.w-full {
   width: 100%;
 }
 
 @media (min-width: 768px) {
-  .d-md-flex{
+  .d-md-flex {
     display: flex;
   }
 
-  .exercises-md-col-4{
+  .exercises-md-col-4 {
     flex: 0 0 auto;
     width: 33.33333333%;
   }
@@ -281,12 +282,12 @@
     width: 58.33333333%;
   }
 
-  .exercises-md-col-12{
+  .exercises-md-col-12 {
     flex: 0 0 auto;
     width: 100%;
   }
 
-  .w-md-full{
+  .w-md-full {
     width: 100%;
   }
 }
@@ -335,13 +336,17 @@
   align-items: center;
 }
 
-.btn-workout {
+.exercise-header-left{
+  display: flex;
+  gap: 16px;
+}
+
+.exercise-workout {
   background-color: #fff;
   border: 1px solid #000;
   border-radius: 20px;
   padding: 5px 10px;
   font-weight: bold;
-  cursor: pointer;
 }
 
 .exercise-rating {
@@ -362,6 +367,14 @@
   font-weight: bold;
   color: #000;
   cursor: pointer;
+}
+
+.exercise-name-icon {
+  position: relative;
+  margin-right: 16px;
+  top: 6px;
+  width: 24px;
+  height: 24px;  
 }
 
 .exercise-name {
