--- a/src/partials/favorite.html
+++ b/src/partials/favorite.html
@@ -19,4 +19,5 @@
     </div>
   </section>
 </main>
+<script type="module" src="./js/nav.js"></script>
 <script type="module" src="./js/favorite.js"></script>
