favorites styles in progress

--- a/src/partials/favorite.html
+++ b/src/partials/favorite.html
@@ -3,7 +3,10 @@
     <h1 class="favorites-tittle">Favorites</h1>
 
     <div class="favorites-thumb">
-      <div class="quote-continer">
+      <div class="quote-container">
+        <load src="partials/quotes.html" />
+      </div>
+      <!-- <div class="quote-continer">
         <div class="favorites-quote">
           <svg class="man-svg" width="34" height="32">
             <use href="./img/icons/sprites.svg#icon-icon"></use>
@@ -50,7 +53,7 @@
             alt="women walking outdoors"
           />
         </div>
-      </div>
+      </div> -->
       <div class="js-hidden-text">
         <p class="favorites-text default-text">
           It appears that you haven't added any exercises to your favorites yet.
@@ -60,10 +63,8 @@
       </div>
       <div class="favorites-gallery">
         <ul class="gallery-list"></ul>
-        
       </div>
     </div>
   </section>
 </main>
 <script type="module" src="./js/favorite.js"></script>
-
