--- a/src/css/favorite.css
+++ b/src/css/favorite.css
@@ -1,18 +1,6 @@
-.favorites {
-  padding-top: 80px;
-  padding-bottom: 80px;
-}
-
-@media screen and (min-width: 768px) {
-  .favorites {
-    padding-bottom: 100px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .favorites {
-    padding-bottom: 51px;
-  }
+.exercises-row {
+  margin: 0 auto;
+  margin-inline: -0.5rem;
 }
 
 .favorites-tittle {
@@ -29,213 +17,66 @@
   }
 }
 
-.features-container {
+.quote-container {
   display: flex;
   flex-direction: column;
+  padding: 0;
   gap: 20px;
-  margin-top: 20px;
 }
 
 @media screen and (min-width: 768px) {
-  .features-container {
+  .quote-container {
     flex-direction: row;
     gap: 16px;
-    margin-top: 16px;
   }
 }
 
 @media screen and (min-width: 1440px) {
   .quote-container {
-    display: flex;
+    width: 700px;
     flex-direction: column;
-    margin-right: 32px;
   }
+}
+
+.favorites-thumb {
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 1440px) {
   .favorites-thumb {
-    display: flex;
-    margin-top: 44px;
+    flex-direction: row;
   }
 }
 
-.favorites-quote {
-  display: flex;
-  position: relative;
-  border-radius: 20px;
-  background: #242424;
-  margin-top: 20px;
-  padding: 20px;
-}
-
-.favorites-quote > man-svg {
-  position: absolute;
-}
-
-@media screen and (min-width: 768px) {
-  .favorites-quote {
-    margin-top: 32px;
-    padding: 40px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .favorites-quote {
-    margin-top: 0;
-    width: 494px;
-  }
-}
-
-.commas-svg {
-  position: absolute;
-  right: 20px;
-}
-
-.quote-tittle {
-  color: #f4f4f4;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 20px;
-  margin-bottom: 6px;
-}
-
-@media screen and (min-width: 768px) {
-  .quote-tittle {
-    font-size: 24px;
-  }
-}
-
-.quote-text {
-  color: rgba(244, 244, 244, 0.6);
-  font-size: 14px;
-  line-height: 18px;
-}
-
-.quote-content {
-  display: flex;
-  flex-direction: column;
-  padding-left: 48px;
-}
-
-@media screen and (min-width: 768px) {
-  .quote-content {
-    width: 574px;
-  }
-}
-
-.quote-author {
-  margin-top: 18px;
-  color: #f4f4f4;
-  font-size: 16px;
-  line-height: 24px;
-}
-
-.man-svg {
-  position: absolute;
-}
-
-.features {
-  border-radius: 20px;
-  background: #fff;
-}
-
-.features-tittle {
-  color: #242424;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 20px;
-}
-
-@media screen and (min-width: 768px) {
-  .features-tittle {
-    font-size: 24px;
-  }
-}
-
-.favorites-text {
-  color: rgba(36, 36, 36, 0.6);
-  font-size: 14px;
-  line-height: 18px;
-}
-
-.features-content {
-  display: inline-flex;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-  flex-direction: column;
-  justify-content: center;
-}
-
-@media screen and (min-width: 768px) {
-  .features-content {
-    padding-top: 25px;
-    padding-bottom: 25px;
-    padding-left: 25px;
-    padding-right: 200px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .features-content {
-    padding-right: 95px;
-  }
-}
-
-.favorites-img {
-  display: block;
-  width: 100%;
-  height: auto;
-  border-radius: 20px;
-}
-
-.text-pozition {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 6px;
-  margin-top: 15px;
-  width: 119px;
-}
-
-.default-text {
-  color: #242424;
-  margin-top: 0;
-}
-
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
   .default-text {
     font-size: 18px;
   }
-}
+} */
 
 .js-hidden-text {
-  display: flex;
-  margin-top: 40px;
+  margin: 0;
+  padding: 20px 9px;
   text-align: center;
-
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 9px;
-  padding-right: 9px;
+  font-size: 14px;
+  line-height: 1.28571;
 }
 
 @media screen and (min-width: 768px) {
   .js-hidden-text {
-    margin-top: 140px;
-    width: 554px;
+    padding: 132px 75px;
+    font-size: 18px;
+    line-height: 1.33333;
   }
 }
 
 @media screen and (min-width: 1440px) {
   .js-hidden-text {
-    margin: auto;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .gallery-list {
-    margin-top: 0px;
+    padding: 114px 0;
+    width: 554px;
   }
 }
 
@@ -245,27 +86,18 @@
   text-align: center;
   flex-wrap: wrap;
   gap: 20px;
-  margin-bottom: 20px;
 }
 
 @media screen and (min-width: 768px) {
   .gallery-list {
-    gap: 16px;
-    margin-top: 64px;
-    margin-bottom: 32px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .gallery-list {
-    margin-top: 0px;
     gap: 32px 16px;
+    margin: 0px;
   }
 }
-
 
 .exercise-card {
   list-style: none;
+  width: 335px;
   padding: 15px;
   border-radius: 15px;
   background-color: #fff;
@@ -282,7 +114,7 @@
 
 @media screen and (min-width: 768px) {
   .exercise-card {
-    width: 343px;
+    width: 344px;
   }
 }
 
@@ -331,12 +163,6 @@
   line-height: 20px;
 }
 
-/* .exercise-name {
-  font-size: 1.2rem;
-  font-weight: bold;
-  margin: 0;
-} */
-
 @media screen and (min-width: 768px) {
   .favorite-exercise-name {
     font-size: 24px;
@@ -377,7 +203,7 @@
 }
 
 .trash-btn:hover .trash-svg,
-.trash-btn:focus .trash-svg{
+.trash-btn:focus .trash-svg {
   stroke: var(--color-white);
   cursor: pointer;
 }
@@ -415,12 +241,22 @@
   overflow-y: auto;
   overflow-y: scroll;
   overflow-x: hidden;
-  padding: 10px;
+  padding-right: 10px;
   box-sizing: border-box;
+  margin-top: 20px;
 }
 
-.gallery-list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+@media screen and (min-width: 768px) {
+  .favorites-gallery {
+    margin-top: 32px;
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .favorites-gallery {
+    margin: 0;
+    padding: 0 10px;
+    width: 100%;
+  }
 }
