--- a/src/css/favorite.css
+++ b/src/css/favorite.css
@@ -1,4 +1,4 @@
-.exercises-row {
+.quote-container > exercises-row {
   margin: 0 auto;
   margin-inline: -0.5rem;
 }
@@ -50,12 +50,6 @@
     flex-direction: row;
   }
 }
-
-/* @media screen and (min-width: 768px) {
-  .default-text {
-    font-size: 18px;
-  }
-} */
 
 .js-hidden-text {
   margin: 0;
