--- a/src/css/main.css
+++ b/src/css/main.css
@@ -324,6 +324,7 @@
 /********************** End of Common classes **********************/
 
 .exercise-item {
+  width: 335px;
   list-style: none;
   padding: 15px;
   border-radius: 15px;
@@ -333,6 +334,18 @@
 .exercise-item:hover,
 .exercise-item:focus {
   box-shadow: 0px 4px 4px 1px var(--color-grey);
+}
+
+@media screen and (min-width: 768px) {
+  .exercise-item {
+    width: 344px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .exercise-item {
+    width: 442px;
+  }
 }
 
 .exercise-details__item {
